--- a/src/components/Comment.css
+++ b/src/components/Comment.css
@@ -1,16 +1,17 @@
 .comment-container {
-  background: #f8f8f8;
+  background: #292929;
   padding: 10px;
-  border-radius: 6px;
-  margin-bottom: 8px;
+  border-radius: 5px;
+  color: white;
+  margin-top: 5px;
 }
 
-.comment-container p {
-  margin: 5px 0;
+.comment-text {
+  font-size: 14px;
 }
 
-.btn-delete {
-  background: none;
+.delete-btn {
+  background: transparent;
   border: none;
   color: red;
   cursor: pointer;
