--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: black;
-  padding: 10px 20px;
+  padding: auto;
   color: white;
   height: 60px;
   box-shadow: 0px 4px 10px rgba(255, 204, 0, 0.3);
