--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-html,
+/* html,
 body,
 #root {
   height: 100%;
@@ -19,4 +19,8 @@ body,
 
 footer {
   margin-top: auto;
+} */
+
+* {
+  box-sizing: border-box;
 }
